--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".sign_inPage"
+            android:name=".SignInActivity"
             android:exported="false">
         </activity>
 
