--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".WritePostActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".SignInActivity"
             android:exported="false">
         </activity>
