--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <activity android:name=".MyPostsActivity" />
+    <activity android:name=".LikedPostsActivity" />
+        <activity android:name=".MyPostsActivity" />
     </application>
 
 </manifest>
