--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
-
-
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -23,11 +21,20 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
+            android:name=".SplashActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ReportActivity"
             android:exported="false" />
         <activity
             android:name=".SearchAccActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".SearchNumActivity"
             android:exported="false" />
@@ -39,6 +46,7 @@
             android:exported="false" />
         <activity
             android:name=".PostDetailActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
@@ -50,11 +58,6 @@
         <activity
             android:name=".OnboardingActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     <activity android:name=".LikedPostsActivity" />
         <activity android:name=".MyPostsActivity" />
